# Snake

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  README.mk  Snake.cbp  snakeHighscore.esh
cmake_modules/: FindSFML.cmake
include/: CommonTypes.h  Field.h  GameActive.h  GameLevelCompleted.h  GameMainMenu.h  GameOver.h  GamePaused.h  GameState.h  GlobalResources.h  Highscore.h  Item.h  Level.h  Snake.h  SnakeGame.h  stxutif.h  utf8stream.h
resources/: attribution.txt  level0.esl  level1.esl  level2.esl  level3.esl  level4.esl  level5.esl
src/: CMakeLists.txt  Field.cpp  GameActive.cpp  GameLevelCompleted.cpp  GameMainMenu.cpp  GameOver.cpp  GamePaused.cpp  GameState.cpp  GlobalResources.cpp  Highscore.cpp  Item.cpp  Level.cpp  Snake.cpp  SnakeGame.cpp  gel.cpp
